--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,25 +1,17 @@
-<h1>Listing statuses</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
+<div class="page-header"
+<h1 style="text-align:center; font-size:40px"><strong>All The Statuses</strong></h1>
+</div>
+<div class="container">
+<%= link_to "Create A New Template", new_status_path, class: "btn btn-primary" %>
 <% @statuses.each do |status| %>
-  <tr>
-    <td><%= status.name %></td>
-    <td><%= status.content %></td>
-    <td><%= link_to 'Show', status %></td>
-    <td><%= link_to 'Edit', edit_status_path(status) %></td>
-    <td><%= link_to 'Destroy', status, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+<div class="status">
+  <strong><%= status.name %></strong>
+<p><%= status.content %></p>
+<div class="meta">
+  <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+  <span class="admin">
+    | <%= link_to "Edit", edit_status_path(status) %> |
+    <%= link_to "Delete", status, method: :delete, data: {confirm: "Are you sure?"} %>
+  </span>
+</div>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Status', new_status_path %>
